deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oap
  namespace: test-apm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oap
  template:
    metadata:
      labels:
        app: oap
        release: skywalking
    spec:
      nodeSelector:
        test-apms: ""
      serviceAccountName: skywalking-oap-sa
      containers:
        - name: oap
          image: reg.jevic.cn/basic/skywalking-oap-server:7.0.0-es7
          command: ["sh","-c","cat /tmp/alarm-settings.yml > /skywalking/config/alarm-settings.yml && /bin/bash docker-entrypoint.sh"]
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 12800
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 12800
            initialDelaySeconds: 15
            periodSeconds: 20
          ports:
            - containerPort: 11800
              name: grpc
            - containerPort: 12800
              name: rest
          resources:
            requests:
              memory: 4Gi
            limits:
              memory: 4Gi
          volumeMounts:
            - name: yml
              mountPath: /tmp
              readOnly: false
      volumes:
        - name: yml
          configMap:
            name: apm-alarm-configmap
            defaultMode: 0755
            items:
            - key: alarm-settings.yml
              path: alarm-settings.yml
