deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oap
  namespace: test-apm
  labels:
    service: oap
spec:
  ports:
    - port: 12800
      name: rest
    - port: 11800
      name: grpc
  selector:
    app: oap
